<resources>
    <string name="app_name">Collections and Maps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_start_state">Start</string>
    <string name="et_hint_enter_elements">Enter elements amount</string>
    <string name="et_hint_enter_threads">Enter threads amount</string>
    <string name="tv_elements">Elements</string>
    <string name="tv_threads">Threads</string>

    <string name="enter_elements">Amount of elements must be more than null</string>
    <string name="enter_threads">Amount of threads must be more than null</string>
    <string name="elements_must_not_be_empty">Amount of elements must not be empty</string>
    <string name="threads_must_not_be_empty">Amount of threads must not be empty</string>

    <string name="btn_stop_state">Stop</string>
    <string name="collection_toggle_title">Collections</string>
    <string name="map_toggle_title">Maps</string>

    <string name="adding_to_start_array_list">Adding to start in ArrayList </string>
    <string name="adding_to_middle_array_list">Adding to middle in ArrayList </string>
    <string name="adding_to_end_array_list">Adding to end in ArrayList </string>
    <string name="removing_from_start_array_list">Removing from start in ArrayList </string>
    <string name="removing_from_middle_array_list">Removing from middle in ArrayList </string>
    <string name="removing_from_end_array_list">Removing from end in ArrayList </string>
    <string name="search_array_list">Search in ArrayList </string>

    <string name="adding_to_start_linked_list">Adding to start in LinkedList </string>
    <string name="adding_to_middle_linked_list">Adding to middle in LinkedList </string>
    <string name="adding_to_end_linked_list">Adding to end in LinkedList </string>
    <string name="removing_from_start_linked_list">Removing from start in LinkedList </string>
    <string name="removing_from_middle_linked_list">Removing from middle in LinkedList </string>
    <string name="removing_from_end_linked_list">Removing from end in LinkedList </string>
    <string name="search_linked_list">Search in LinkedList </string>

    <string name="adding_to_start_copy_on_write_list">Adding to start in CopyOnWriteList </string>
    <string name="adding_to_middle_copy_on_write_list">Adding to middle in CopyOnWriteList </string>
    <string name="adding_to_end_copy_on_write_list">Adding to end in CopyOnWriteList </string>
    <string name="removing_from_start_copy_on_write_list">Removing from start in CopyOnWriteList </string>
    <string name="removing_from_middle_copy_on_write_list">Removing from middle in CopyOnWriteList </string>
    <string name="removing_from_end_copy_on_write_list">Removing from end in CopyOnWriteList </string>
    <string name="search_copy_on_write_list">Search in CopyOnWriteList </string>

    <string name="search_hash_map">Search in HashMap </string>
    <string name="adding_hash_map">Adding to HashMap </string>
    <string name="removing_hash_map">Removing from HashMap </string>

    <string name="search_tree_map">Search in TreeMap </string>
    <string name="adding_tree_map">Adding to TreeMap </string>
    <string name="removing_tree_map">Removing from TreeMap </string>

    <string name="array_list">ArrayList </string>
    <string name="copy_on_write_list">CopyOnWriteList </string>
    <string name="linked_list">LinkedList </string>
    <string name="hash_map">HashMap </string>
    <string name="tree_map">TreeMap </string>
    <string name="calculation_finished">Calculation is finished</string>
    <string name="calculation_stopped">Calculation is stopped</string>
    <string name="dimension_ms">%1$f ms</string>
    <string name="default_time">N/A ms</string>

</resources>
