<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragments_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/btnStartOrStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textOn="@string/btn_stop_state"
        android:textOff="@string/btn_start_state"
        app:layout_constraintBottom_toBottomOf="@+id/etAmountOfThreads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAmountOfElements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_hint_enter_elements"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/btnStartOrStop"
        app:layout_constraintStart_toEndOf="@+id/tvAmountOfElementsLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAmountOfThreads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_hint_enter_threads"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/btnStartOrStop"
        app:layout_constraintTop_toBottomOf="@+id/etAmountOfElements"
        app:layout_constraintStart_toEndOf="@+id/tvAmountOfElementsLabel"/>

    <TextView
        android:id="@+id/tvAmountOfElementsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_elements"
        app:layout_constraintBottom_toBottomOf="@+id/etAmountOfElements"
        app:layout_constraintEnd_toStartOf="@+id/etAmountOfElements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etAmountOfElements" />

    <TextView
        android:id="@+id/tvAmountOfThreadsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_threads"
        app:layout_constraintBottom_toBottomOf="@+id/etAmountOfThreads"
        app:layout_constraintEnd_toStartOf="@+id/etAmountOfThreads"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etAmountOfThreads" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etAmountOfThreads"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>