<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/tvNameOfTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimeForTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tvNameOfTask"
        app:layout_constraintStart_toStartOf="@+id/tvNameOfTask"
        app:layout_constraintTop_toBottomOf="@+id/tvNameOfTask" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="42dp"
        android:layout_height="42dp"
        app:layout_constraintEnd_toEndOf="@+id/tvNameOfTask"
        app:layout_constraintStart_toStartOf="@+id/tvNameOfTask"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeForTask" />
</android.support.constraint.ConstraintLayout>